Fix incorrectly rounded page size.

Internal page size for Letter sized pages was 1054px instead of 1056px.

kPrintingMinimumShrinkFactor of 1.333f was not enough precision. It caused incorrect rounding inside of ResizePageRectsKeepingRatio.

Changing the constant makes page size correct.

BUG=716548

Review-Url: https://codereview.chromium.org/2854143003
Cr-Commit-Position: refs/heads/master@{#468823}

Former-commit-id: 78d293247b9fdde885702c3e9a879e8710e131f8